--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,5 @@
 // Override default variables before the import
-$body-bg: cyan;
+$body-bg: #74bf9d;
 
 // Import Bootstrap and its default variables
 @import 'bootstrap/scss/bootstrap.scss';
-
-.row {
-  margin-right: auto;
-}
