Add vertical alignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,7 @@ $body-bg: #74bf9d;
 
 // Import Bootstrap and its default variables
 @import 'bootstrap/scss/bootstrap.scss';
+
+#root {
+  height: 100vh;
+}
